fix(dialog): fix spacing

--- a/src/components/Dialog/Content/styles.module.css
+++ b/src/components/Dialog/Content/styles.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   flex-shrink: 1;
   max-height: calc(70vh - 4.25rem); /* 4.25rem is the height of header */
+  overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 
