--- a/src/views/User/UserProfile/FollowingDialog/FeedType/styles.module.css
+++ b/src/views/User/UserProfile/FollowingDialog/FeedType/styles.module.css
@@ -7,6 +7,6 @@
 
   @media (--sm-up) {
     top: calc(var(--spacing-base) * -1);
-    margin: calc(var(--spacing-base) * -1) var(--spacing-base) 0;
+    margin: calc(var(--spacing-base-loose) * -1) var(--spacing-base) 0;
   }
 }
